--- a/manifest.json
+++ b/manifest.json
@@ -3,7 +3,7 @@
   "name": "Nimble RPG",
   "type": "system",
   "version": "0.1.0",
-  "description": "Nimble is a fast-paced fantasy tabletop RPG emphasizing tactical combat, heroic actions, and streamlined mechanics.",
+  "description": "A fast-paced fantasy tabletop RPG emphasizing tactical combat, heroic actions, and streamlined mechanics.",
   "download": "https://github.com/encounterplus/nimble/releases/download/0.1.0/nimble.system",
   "compatibility": {
     "minimum": "5.0.0+3848"
